Improving query time.
Former-commit-id: 7be05af5acc4f938e400fdff02b4464265ff4a41 [formerly 1ffed5a227d3285de1a51d210621fc346024d769]
Former-commit-id: 0bc120c2b5975ad8805c4bf6824ac7383529be86

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+TCGAbiolinks 2.0
+---------------------------------------------------------------
+* GDC functions added (GDCquery, GDCdownload, GDCprepare,
+GDCquery_Maf, GDCprepare_clinic)
+* Removed TCGAquery_investigate, TCGAprofile_plot
+
 TCGAbiolinks 1.3.6
 ---------------------------------------------------------------
 * Starting to move the code to GDC data portal
