--- a/vignettes/tcgaBiolinks.Rmd
+++ b/vignettes/tcgaBiolinks.Rmd
@@ -1517,7 +1517,8 @@ to create a mean DNA methylation boxplot with the function
 `TCGAvisualize_meanMethylation` as follows:
 
 ```{r,include=FALSE,echo=FALSE, fig.height=5, message=FALSE, warning=FALSE}
-query <- GDCquery(project = "TCGA-GBM",
+data <- tryCatch({
+    query <- GDCquery(project = "TCGA-GBM",
                   data.category = "DNA methylation",
                   platform = "Illumina Human Methylation 27",
                   legacy = TRUE, 
@@ -1525,8 +1526,29 @@ query <- GDCquery(project = "TCGA-GBM",
                               "TCGA-12-0829-01A-01D-0392-05", "TCGA-06-0155-01B-01D-0521-05",
                               "TCGA-02-0099-01A-01D-0199-05", "TCGA-19-4068-01A-01D-1228-05",
                               "TCGA-19-1788-01A-01D-0595-05", "TCGA-16-0848-01A-01D-0392-05"))
-GDCdownload(query, method = "api")
-data <- GDCprepare(query)
+            GDCdownload(query, method = "api", chunks.per.download = 2)
+            GDCdownload(query, method = "api")
+            data <- GDCprepare(query)
+             data
+    }, error = function(e) {
+         nrows <- 200; ncols <- 21
+         counts <- matrix(runif(nrows * ncols, 0, 1), nrows)
+         rowRanges <- GenomicRanges::GRanges(rep(c("chr1", "chr2"), c(50, 150)),
+                            IRanges::IRanges(floor(runif(200, 1e5, 1e6)), width=100),
+                            strand=sample(c("+", "-"), 200, TRUE),
+                            feature_id=sprintf("ID%03d", 1:200))
+        colData <- S4Vectors::DataFrame(shortLetterCode=rep(c("NT", "TP","TR"), 7),
+                         row.names=LETTERS[1:21],
+                         subtype_Pan.Glioma.DNA.Methylation.Cluster=rep(c("group1","group2","group3"),c(7,7,7)),
+                         vital_status=rep(c("DEAD","ALIVE","DEAD"),7))
+        data <- SummarizedExperiment::SummarizedExperiment(
+                    assays=S4Vectors::SimpleList(counts=counts),
+                    rowRanges=rowRanges,
+                    colData=colData)
+        data
+
+        }
+    )
 ```
 
 ```{r, eval=FALSE, echo=TRUE, fig.height=5, message=FALSE, warning=FALSE}
