--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+CHANGES IN VERSION 2.2.0
+-------------------------
+
+NEW FEATURES
+    o Add GISTIC2 information and Mutation information in the summarizedExperiment while preparing GDC data
+
+SIGNIFICANT USER-LEVEL CHANGES
+    o Speed up GDCquery
+
 TCGAbiolinks 2.0
 ---------------------------------------------------------------
 * GDC functions added (GDCquery, GDCdownload, GDCprepare,
