adding missing parameter to untar
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/TCGAbiolinks@122298 bc3139a8-67e5-0310-9ffc-ced21a209358

Former-commit-id: 19e564492ae8c431c94d8ad3c65ece3643bb8ebd [formerly 3a946577cb8a46d73630f9a524574910a551657e]
Former-commit-id: 37b59c817695e6cb208dd07af9eb540175451284

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,27 @@
+CHANGES IN VERSION 2.2.0
+-------------------------
+
+NEW FEATURES
+    o Add GISTIC2 information and Mutation information in the summarizedExperiment while preparing GDC data
+
+SIGNIFICANT USER-LEVEL CHANGES
+    o Speed up GDCquery
+
+TCGAbiolinks 2.0
+---------------------------------------------------------------
+* GDC functions added (GDCquery, GDCdownload, GDCprepare,
+GDCquery_Maf, GDCprepare_clinic)
+* Removed TCGAquery_investigate, TCGAprofile_plot
+
+TCGAbiolinks 1.3.6
+---------------------------------------------------------------
+* Starting to move the code to GDC data portal
+
+TCGAbiolinks 1.1.26
+---------------------------------------------------------------
+* Bug fix: TCGAprepare for  IlluminaHiSeq_miRNASeq platform was
+not considering all file types
+
 TCGAbiolinks 1.1.26
 ---------------------------------------------------------------
 * Bug fix: TCGAprepare for  IlluminaHiSeq_miRNASeq platform was
